--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h1 {
     font-weight: bold;
 }
 
-h2 {
+#timer {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 h4 {
