--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ h1 {
     font-weight: bold;
 }
 
-#timer {
+#remaining-time {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 20px;
     font-weight: bold;
